# DocuQuery

./: .gitignore  .replit  package-lock.json  package.json  pyproject.toml  replit.md  start.sh  webpack.config.js
backend/: app.py  models.py
frontend/public/: index.html
frontend/src/: App.css  App.js
